--- a/brax/visualizer/index.html
+++ b/brax/visualizer/index.html
@@ -37,8 +37,20 @@
     }
   </script>
 
+  <script src="https://unpkg.com/pako@2.1.0/dist/pako.min.js"></script>
+
   <script type="application/javascript">
-  var system = {{ system_json }};
+  var system = "{{ system_json_b64 }}";
+  // decode base64 (convert ascii to binary)
+  system = atob(system);
+  // convert binary string to character-number array
+  system = system.split('').map(function(x){return x.charCodeAt(0);});
+  // decompress
+  system = pako.inflate(system);
+  // convert gunzipped byteArray back to ascii string
+  system = new TextDecoder("utf-8").decode(system);
+  // and load json
+  system = JSON.parse(system);
   </script>
 
   <body>
